<resources>
    <string name="app_name">FifStore</string>
    <string name="nama">Nama</string>
    <string name="titik_dua">: </string>
    <string name="nama_barang">Asus ROG intel CASDASDASDASDASDASDASore i7</string>
    <string name="harga">Harga</string>
    <string name="harga_barang">7000000</string>
    <string name="stok">Stok</string>
    <string name="stok_barang">15</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>
    <string name="tambah">Tambah Data</string>
    <string name="logout">Logout</string>
    <string name="nama_barangg">Nama Barang</string>
    <string name="Simpan">Simpan</string>
    <string name="edit_barang">Edit Barang</string>
    <string name="tambah_barang">Tambah barang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_login">User Login</string>
    <string name="user_register">User Register</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="have_an_account">Have an account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ubah_data">Ubah Data</string>
</resources>