<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/constrain_start"
        android:layout_marginEnd="@dimen/constrain_end"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/auth_title"
                    android:textColor="@color/black"
                    android:text="@string/user_register"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/top_margin_auth"
                    android:textAllCaps="true"/>

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fifstore_logo"/>

                <EditText
                    android:id="@+id/et_name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/constaint_top"
                    android:textSize="@dimen/content"
                    android:textColor="@color/black"
                    android:hint="@string/name"/>
                <EditText
                    android:id="@+id/et_username_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/constaint_top"
                    android:textSize="@dimen/content"
                    android:textColor="@color/black"
                    android:hint="@string/username"/>

                <EditText
                    android:id="@+id/et_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/constaint_top"
                    android:textSize="@dimen/content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:hint="@string/password"/>

                <Button
                    android:id="@+id/btn_register_signup"
                    android:layout_marginTop="@dimen/top_margin_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/content"
                    android:text="@string/register"
                    android:background="@drawable/selector_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin_hint"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_an_account"
                        android:textSize="@dimen/small_content"/>

                    <TextView
                        android:id="@+id/tv_btn_signin_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/small_content"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</FrameLayout>